<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    android:background="@drawable/login_background">

    <TextView
        android:id="@+id/signup_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.129" />

    <EditText
        android:id="@+id/name_edittext_signup"
        android:layout_width="295dp"
        android:layout_height="48dp"
        android:layout_marginTop="216dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/button_border"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:textAlignment="gravity"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/email_edittext_signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/email_edittext_signup"
        android:layout_width="295dp"
        android:layout_height="48dp"
        android:layout_marginTop="292dp"
        android:background="@drawable/button_border"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:textAlignment="gravity"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/password_edittext_signup"
        android:layout_width="295dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_border"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textAlignment="gravity"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_edittext_signup"
        app:layout_constraintVertical_bias="0.063" />

    <Button
        android:id="@+id/signup_button"
        android:layout_width="295dp"
        android:layout_height="48dp"
        android:layout_marginTop="88dp"
        android:background="@drawable/button"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/signup"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_edittext_signup" />

    <Button
        android:id="@+id/login_google_button"
        android:layout_width="295dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_border"
        android:drawableStart="@drawable/ic_iconmonstr_google_plus_1"
        android:padding="15dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/login_with_google"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_button"
        app:layout_constraintVertical_bias="0.025" />

    <TextView
        android:id="@+id/already_have_account_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="132dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/already_have_an_account_log_in_here"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_google_button"
        app:layout_constraintVertical_bias="0.22" />

</androidx.constraintlayout.widget.ConstraintLayout>